--- a/saturated.html
+++ b/saturated.html
@@ -37,27 +37,34 @@
 
             <article>
                 <p>
-                yellow-violet<br>
-                orangeyellow-blueviolet<br>
-                orange-blue<br>
-                redorange-bluegreen<br>
-                red-green<br>
-                yellowgreen-violetred<br>
-                yellow-yellowgreen-green<br>
-                yellowgreen-green-bluegreen<br>
-                green-bluegreen-blue<br>
-                bluegreen-blue-blueviolet<br>
-                blue-blueviolet-violet<br>
-                violet-violetred-red<br>
-                violetred-red-orangered<br>
-                red-orangered-orange<br>
-                orangered-orange-yelloworange<br>
-                orange-yelloworange-yellow<br>
-                yelloworange-yellow-yellowgreen<br>
-                yellow-red-blue<br>
-                yelloworange-redviolet-bluegreen<br>
-                orange-violet-green<br>
-                redorange-blueviolet-yellowgreen<br>
+                <!--comp-->yellow-violet<br>
+                <!--comp-->orangeyellow-blueviolet<br>
+                <!--comp-->orange-blue<br>
+                <!--comp-->redorange-bluegreen<br>
+                <!--comp-->red-green<br>
+                <!--comp-->yellowgreen-violetred<br>
+                <!--ana-->yellow-yellowgreen-green<br>
+                <!--ana-->yellowgreen-green-bluegreen<br>
+                <!--ana-->green-bluegreen-blue<br>
+                <!--ana-->bluegreen-blue-blueviolet<br>
+                <!--ana-->blue-blueviolet-violet<br>
+                <!--ana-->violet-violetred-red<br>
+                <!--ana-->violetred-red-orangered<br>
+                <!--ana-->red-orangered-orange<br>
+                <!--ana-->orangered-orange-yelloworange<br>
+                <!--ana-->orange-yelloworange-yellow<br>
+                <!--ana-->yelloworange-yellow-yellowgreen<br>
+                <!--tri-->yellow-red-blue<br>
+                <!--tri-->yelloworange-redviolet-bluegreen<br>
+                <!--tri-->orange-violet-green<br>
+                <!--tri-->redorange-blueviolet-yellowgreen<br>
+                <!--spl-->blue-yelloworange-redorange<br>
+                <!--spl-->bluegreen-orange-red<br>
+                <!--spl-->green-redorange-redviolet<br>
+                <!--spl-->yellowgreen-red-violet<br>
+                <!--spl-->yellow-redviolet-blueviolet<br>
+                <!--spl-->yelloworange-violet-blue<br>
+                <!--spl-->orange-blueviolet-bluegreen<br>
                 </p>
             </article>
         
