--- a/color_theory.html
+++ b/color_theory.html
@@ -37,7 +37,7 @@
                 </p>
                 <p>
                 Triadic colors:<br>
-                Triadic colors are three colors evenly spaced on the color wheel. Because of the wide contrast, triadic colors are often quite dramatic, but by choosing sundued shades you can tone down the drama. To make it less overwhelming, you could also choose one of the colors to be your main color and to use that one the most, while you use the other two to make small details.
+                Triadic colors are three colors evenly spaced on the color wheel. Because of the wide contrast, triadic colors are often quite dramatic, but by choosing subdued shades you can tone down the drama. To make it less overwhelming, you could also choose one of the colors to be your main color and to use that one the most, while you use the other two to make small details.
                 </p>
                 <p>
                 Split complementary colors:<br>
