--- a/saturated.html
+++ b/saturated.html
@@ -26,45 +26,58 @@
             
             <article>
                 <p class="filter-system">
-                <span>complementary colors</span><br>
-                <span>cool analogous colors</span><br>
-                <span>warm analogous colors</span><br>
-                <span>triadic colors</span><br>
-                <span>split complementary colors</span><br>
-                <span>tetradic</span><br>
+                <a href="saturated.html">all</a><br>
+                <a href="saturated_comp.html">complementary colors</a><br>
+                <a href="saturated_cana.html">cool analogous colors</a><br>
+                <a href="saturated_wana.html">warm analogous colors</a><br>
+                <a href="saturated_tri.html">triadic colors</a><br>
+                <a href="saturated_spl.html">split complementary colors</a><br>
+                <a href="saturated_tet.html">tetradic colors</a><br>
                 </p>
             </article>
 
             <article>
-                <p>
-                <!--comp-->yellow-violet<br>
-                <!--comp-->orangeyellow-blueviolet<br>
-                <!--comp-->orange-blue<br>
-                <!--comp-->redorange-bluegreen<br>
-                <!--comp-->red-green<br>
-                <!--comp-->yellowgreen-violetred<br>
-                <!--ana-->yellow-yellowgreen-green<br>
-                <!--ana-->yellowgreen-green-bluegreen<br>
-                <!--ana-->green-bluegreen-blue<br>
-                <!--ana-->bluegreen-blue-blueviolet<br>
-                <!--ana-->blue-blueviolet-violet<br>
-                <!--ana-->violet-violetred-red<br>
-                <!--ana-->violetred-red-orangered<br>
-                <!--ana-->red-orangered-orange<br>
-                <!--ana-->orangered-orange-yelloworange<br>
-                <!--ana-->orange-yelloworange-yellow<br>
-                <!--ana-->yelloworange-yellow-yellowgreen<br>
-                <!--tri-->yellow-red-blue<br>
-                <!--tri-->yelloworange-redviolet-bluegreen<br>
-                <!--tri-->orange-violet-green<br>
-                <!--tri-->redorange-blueviolet-yellowgreen<br>
-                <!--spl-->blue-yelloworange-redorange<br>
-                <!--spl-->bluegreen-orange-red<br>
-                <!--spl-->green-redorange-redviolet<br>
-                <!--spl-->yellowgreen-red-violet<br>
-                <!--spl-->yellow-redviolet-blueviolet<br>
-                <!--spl-->yelloworange-violet-blue<br>
-                <!--spl-->orange-blueviolet-bluegreen<br>
+                <p class="color-palettes">
+                <!--comp--><span class="s-yellow">yellow</span>-<span class="s-purple">purple</span><br><br><br><br>
+                <!--comp--><span class="s-yelloworange">yelloworange</span>-<span class="s-bluepurple">bluepurple</span><br><br><br><br>
+                <!--comp--><span class="s-orange">orange</span>-<span class="s-blue">blue</span><br><br><br><br>
+                <!--comp--><span class="s-redorange">redorange</span>-<span class="s-bluegreen">bluegreen</span><br><br><br><br>
+                <!--comp--><span class="s-red">red</span>-<span class="s-green">green</span><br><br><br><br>
+                <!--comp--><span class="s-redpurple">redpurple</span>-<span class="s-yellowgreen">yellowgreen</span><br><br><br><br>
+                <!--ana--><span class="s-yellow">yellow</span>-<span class="s-yellowgreen">yellowgreen</span>-<span class="s-green">green</span><br><br><br><br>
+                <!--ana--><span class="s-yellowgreen">yellowgreen</span>-<span class="s-green">green</span>-<span class="s-bluegreen">bluegreen</span><br><br><br><br>
+                <!--ana--><span class="s-green">green</span>-<span class="s-bluegreen">bluegreen</span>-<span class="s-blue">blue</span><br><br><br><br>
+                <!--ana--><span class="s-bluegreen">bluegreen</span>-<span class="s-blue">blue</span>-<span class="s-bluepurple">bluepurple</span><br><br><br><br>
+                <!--ana--><span class="s-blue">blue</span>-<span class="s-bluepurple">bluepurple</span>-<span class="s-purple">purple</span><br><br><br><br>
+                <!--ana--><span class="s-bluepurple">bluepurple</span>-<span class="s-purple">purple</span>-<span class="s-redpurple">redpurple</span><br><br><br><br>
+                <!--ana--><span class="s-purple">purple</span>-<span class="s-redpurple">redpurple</span>-<span class="s-red">red</span><br><br><br><br>
+                <!--ana--><span class="s-redpurple">redpurple</span>-<span class="s-red">red</span>-<span class="s-redorange">redorange</span><br><br><br><br>
+                <!--ana--><span class="s-red">red</span>-<span class="s-redorange">redorange</span>-<span class="s-orange">orange</span><br><br><br><br>
+                <!--ana--><span class="s-redorange">redorange</span>-<span class="s-orange">orange</span>-<span class="s-yelloworange">yelloworange</span><br><br><br><br>
+                <!--ana--><span class="s-orange">orange</span>-<span class="s-yelloworange">yelloworange</span>-<span class="s-yellow">yellow</span><br><br><br><br>
+                <!--ana--><span class="s-yelloworange">yelloworange</span>-<span class="s-yellow">yellow</span>-<span class="s-yellowgreen">yellowgreen</span><br><br><br><br>
+                <!--tri--><span class="s-yellow">yellow</span>-<span class="s-red">red</span>-<span class="s-blue">blue</span><br><br><br><br>
+                <!--tri--><span class="s-yelloworange">yelloworange</span>-<span class="s-redpurple">redpurple</span>-<span class="s-bluegreen">bluegreen</span><br><br><br><br>
+                <!--tri--><span class="s-orange">orange</span>-<span class="s-purple">purple</span>-<span class="s-green">green</span><br><br><br><br>
+                <!--tri--><span class="s-redorange">redorange</span>-<span class="s-bluepurple">bluepurple</span>-<span class="s-yellowgreen">yellowgreen</span><br><br><br><br>
+                <!--spl--><span class="s-blue">blue</span>-<span class="s-yelloworange">yelloworange</span>-<span class="s-redorange">redorange</span><br><br><br><br>
+                <!--spl--><span class="s-bluegreen">bluegreen</span>-<span class="s-orange">orange</span>-<span class="s-red">red</span><br><br><br><br>
+                <!--spl--><span class="s-green">green</span>-<span class="s-redorange">redorange</span>-<span class="s-redpurple">redpurple</span><br><br><br><br>
+                <!--spl--><span class="s-yellowgreen">yellowgreen</span>-<span class="s-red">red</span>-<span class="s-purple">purple</span><br><br><br><br>
+                <!--spl--><span class="s-yellow">yellow</span>-<span class="s-redpurple">redpurple</span>-<span class="s-bluepurple">bluepurple</span><br><br><br><br>
+                <!--spl--><span class="s-yelloworange">yelloworange</span>-<span class="s-purple">purple</span>-<span class="s-blue">blue</span><br><br><br><br>
+                <!--spl--><span class="s-orange">orange</span>-<span class="s-bluepurple">bluepurple</span>-<span class="s-bluegreen">bluegreen</span><br><br><br><br>
+                <!--spl--><span class="s-redorange">redorange</span>-<span class="s-blue">blue</span>-<span class="s-green">green</span><br><br><br><br>
+                <!--spl--><span class="s-red">red</span>-<span class="s-bluegreen">bluegreen</span>-<span class="s-yellowgreen">yellowgreen</span><br><br><br><br>
+                <!--spl--><span class="s-redpurple">redpurple</span>-<span class="s-green">green</span>-<span class="s-yellow">yellow</span><br><br><br><br>
+                <!--spl--><span class="s-purple">purple</span>-<span class="s-yellowgreen">yellowgreen</span>-<span class="s-yelloworange">yelloworange</span><br><br><br><br>
+                <!--spl--><span class="s-bluepurple">bluepurple</span>-<span class="s-yellow">yellow</span>-<span class="s-orange">orange</span><br><br><br><br>
+                <!--tet--><span class="s-bluegreen">bluegreen</span>-<span class="s-bluepurple">bluepurple</span>-<span class="s-redorange">redorange</span>-<span class="s-yelloworange">yelloworange</span><br><br><br><br>
+                <!--tet--><span class="s-green">green</span>-<span class="s-blue">blue</span>-<span class="s-red">red</span>-<span class="s-orange">orange</span><br><br><br><br>
+                <!--tet--><span class="s-yellowgreen">yellowgreen</span>-<span class="s-bluegreen">bluegreen</span>-<span class="s-redpurple">redpurple</span>-<span class="s-redorange">redorange</span><br><br><br><br>
+                <!--tet--><span class="s-yellow">yellow</span>-<span class="s-green">green</span>-<span class="s-purple">purple</span>-<span class="s-red">red</span><br><br><br><br>
+                <!--tet--><span class="s-yelloworange">yelloworange</span>-<span class="s-yellowgreen">yellowgreen</span>-<span class="s-bluepurple">bluepurple</span>-<span class="s-redpurple">redpurple</span><br><br><br><br>
+                <!--tet--><span class="s-orange">orange</span>-<span class="s-yellow">yellow</span>-<span class="s-blue">blue</span>-<span class="s-purple">purple</span><br><br><br><br>
                 </p>
             </article>
         
