--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
             
             <article>
                 <p class="column-text">
-                Color palettes they tell you what colors look nice together. They can help you if you want to design a website, or an item that you want to look good. They can also be very useful for artists who want to paint or draw something with complimentary colors. When you just use some color that you like, big chance they're going to clash. If you want your website/item/art to really look good, you should take a look at some of the color palettes on here.<br><br>
+                Color palettes tell you what colors look nice together. They can help you if you want to design a website, or an item that you want to look good. They can also be very useful for artists who want to paint or draw something with complimentary colors. When you just use some color that you like, big chance they're going to clash. If you want your website/item/art to really look good, you should take a look at some of the color palettes on here.<br><br>
                 The color palettes on here are sorted by how saturated they are (how intense the colors are). In the tab named 'saturated colors' are the colors that are the most intense. In 'pastel colors' you can find colors that are lighter. 'Dark colors' has the darker colors.
                 </p>
                 <img id="colorwheel" src="afbeeldingen/kleurenwiel.jpg">
